--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
-mensagem.invalida=Mensagem Invalida
+mensagem.invalida=Mensagem Invu00E1lida
+recurso.nao-encontrado=Recurso n\u00E3o encontrado
 
 categoria.nome=Nome
 
